# geepu

./: Cargo.toml  DEVELOPMENT.md  FEATURES.md  README.md
examples/: compute.rs  compute_simple.rs  macro_example.rs  offscreen.rs  shaders.rs  texture_example.rs  triangle.rs
shaders/: multiply.comp.wgsl  quad.frag.wgsl  quad.vert.wgsl
src/: buffer.rs  compute.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  pipeline.rs  render.rs  renderer.rs  resources.rs  shaders.rs  texture.rs
